crates/fig-lexer/tests/snapshots/integration_tests__namespaces__declaration_only.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Namespace
- Core
- Newline
- Namespace
- Std
- Newline
- Namespace
- Ident: math
- Newline
