crates/fig-lexer/tests/snapshots/integration_tests__namespaces__empty_pass.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Namespace
- Ident: App
- Newline
- Indent
- Pass
- Newline
- Dedent
